# agent-ways

./: .claude-upstream  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  settings.json  statusline.sh  todo-adr-123-continuance.md  todo-adr-123-firing-dynamics.md  todo-monitoring-skill-clusters-continuance.md
tools/: Cargo.toml
tools/agent-fmt/: Cargo.toml
tools/agent-fmt/fonts/: LICENSE
tools/agent-fmt/src/: banner.rs  lib.rs  permissions.rs  table.rs
tools/agent-identity/: Cargo.toml
tools/agent-identity/src/: ansi.rs  groups.rs  identity.rs  lib.rs  names.rs  palette.rs
tools/attend/: Cargo.toml  build.rs
tools/attend-chat/: Cargo.toml  build.rs
tools/attend-chat/src/: app.rs  chip.rs  groups.rs  helper.rs  legend.rs  lib.rs  main.rs  sessions.rs  signal.rs  slash.rs  text_layout.rs  watcher.rs
tools/attend-chat/src/app/: keys.rs  mod.rs
tools/attend-chat/src/chip/: mod.rs  registry.rs  render.rs  routing.rs
tools/attend-chat/tests/: watcher_roundtrip.rs
tools/attend-heartbeat/: Cargo.toml
tools/attend-heartbeat/src/: lib.rs
tools/attend-instances/: Cargo.toml
tools/attend-instances/src/: lib.rs
tools/attend/examples/: gh-notifications.sh  gh-pr-checks.sh  xdg-downloads.sh
tools/attend/src/: cli.rs  cmd.rs  config.rs  config_lint.rs  groups.rs  identity_view.rs  main.rs  rooms.rs  scenes.rs  state.rs  util.rs
tools/attend/src/cmd/: cleanup.rs  config_cmd.rs  focus.rs  inbox.rs  peers.rs  permissions.rs  run.rs  scene.rs  send.rs  sensors.rs  status.rs  tune.rs
tools/attend/src/delta/: mod.rs
tools/attend/src/emit/: mod.rs
tools/attend/src/sensors/: context.rs  git.rs  mod.rs  peer.rs  process.rs  script.rs
tools/attend/src/tick/: mod.rs
tools/mmaid/: download-mmaid.sh
tools/sensor-context/: Cargo.toml
tools/sensor-context/src/: lib.rs
tools/sensor-disclosure/: Cargo.toml
tools/sensor-disclosure/src/: lib.rs
tools/sensor-disclosure/src/disclosures/: messaging.md
tools/sensor-git/: Cargo.toml
tools/sensor-git/src/: lib.rs
tools/sensor-peers/: Cargo.toml
tools/sensor-peers/src/: last_inbound.rs  lib.rs  salience.rs  signal_id.rs
tools/sensor-processes/: Cargo.toml
tools/sensor-processes/src/: lib.rs
tools/sensor-trait/: Cargo.toml
tools/sensor-trait/src/: curve.rs  engagement.rs  lib.rs
tools/way-embed/: Makefile  RELEASE.md  calibrate.sh  compare-engines.sh  download-binary.sh  download-model.sh  test-embedding.sh  test-multilingual.sh  way-embed.cpp
tools/ways-cli/: Cargo.toml  build.rs  download-ways.sh  languages.json
tools/ways-cli/src/: config.rs  frontmatter.rs  main.rs  scanner.rs  session.rs  util.rs
tools/ways-cli/src/agents/: mod.rs
tools/ways-cli/src/cmd/: banner.rs  context.rs  corpus.rs  disable.rs  embed.rs  (+21 more)
tools/ways-cli/tests/: SIMULATION-SPEC.md  project_ways.rs  session_sim.rs
(+454 files in other folders)
