[workspace]
members = [
    "agent-fmt",
    "sensor-trait",
    "sensor-git",
    "sensor-context",
    "sensor-peers",
    "sensor-processes",
    "sensor-disclosure",
    "ways-cli",
    "attend",
    "attend-chat",
]
resolver = "2"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
