[workspace]
members = [
    "agent-fmt",
    "agent-identity",
    "sensor-trait",
    "sensor-git",
    "sensor-context",
    "sensor-peers",
    "sensor-processes",
    "sensor-disclosure",
    "ways-cli",
    "attend",
    "attend-chat",
    "attend-heartbeat",
    "attend-instances",
]
resolver = "2"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
