[package]
name = "attend"
version = "0.4.0"
edition = "2021"
description = "Active awareness module — adaptive sensing and disclosure for Claude Code sessions"
license = "MIT"

[[bin]]
name = "attend"
path = "src/main.rs"

[features]
default = ["sensor-git", "sensor-context", "sensor-peers", "sensor-processes"]
sensor-git = ["dep:sensor-git"]
sensor-context = ["dep:sensor-context"]
sensor-peers = ["dep:sensor-peers"]
sensor-processes = ["dep:sensor-processes"]

[dependencies]
agent-fmt = { path = "../agent-fmt" }
sensor-trait = { path = "../sensor-trait" }
sensor-git = { path = "../sensor-git", optional = true }
sensor-context = { path = "../sensor-context", optional = true }
sensor-peers = { path = "../sensor-peers", optional = true }
sensor-processes = { path = "../sensor-processes", optional = true }
