[package]
name = "ways"
version = "0.6.0"
edition = "2021"
description = "Unified CLI for ways — knowledge guidance for Claude Code"
license = "MIT"

[[bin]]
name = "ways"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["crossterm"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
walkdir = "2"
anyhow = "1"
glob = "0.3"
regex = "1"
rust-stemmers = "1.2"
crossterm = { version = "0.29", optional = true }
agent-fmt = { path = "../agent-fmt" }

